[FIXUP][Resources] Headings not sticky on Safari

--- a/client/components/learn/Resources/Resources.module.scss
+++ b/client/components/learn/Resources/Resources.module.scss
@@ -48,6 +48,7 @@
       top: 0;
       z-index: 9;
       width: 100%;
+      display: block;
       position: sticky;
       padding: 0.5em;
       border-bottom: 0;
